@@ -228,3 +228,4 @@ ERROR:  invalid GML representation
 #2001|POLYGON((0 0,0 1,1 1,0 0))
 #2112a|0|LINESTRING(2.5 2.5 1,2.5 2.5 1)
 #2112b|1|LINESTRING(1 1 1,1 0 1)
+#2117|SRID=3395;POINTM EMPTY
